# SkiTrack

./: .gitignore  README.md  build.gradle  gradle.properties  libs.toml  settings.gradle
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/org/skitrace/skitrace/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/org/skitrace/skitrace/: MainActivity.kt
app/src/main/java/org/skitrace/skitrace/map/: MapStyles.kt
app/src/main/java/org/skitrace/skitrace/ui/map/: MapScreen.kt
app/src/main/java/org/skitrace/skitrace/ui/theme/: Theme.kt
app/src/main/kotlin/org/skitrace/skitrace/: MainActivity.kt  SkiTraceApplication.kt
app/src/main/kotlin/org/skitrace/skitrace/map/: MapStyles.kt
app/src/main/kotlin/org/skitrace/skitrace/service/: TrackerService.kt
app/src/main/kotlin/org/skitrace/skitrace/ui/details/: TrackDetailsScreen.kt
app/src/main/kotlin/org/skitrace/skitrace/ui/map/: MapScreen.kt  MapViewModel.kt
app/src/main/kotlin/org/skitrace/skitrace/ui/navigation/: RootComponent.kt  TabLifecycleAware.kt
app/src/main/kotlin/org/skitrace/skitrace/ui/settings/: SettingsScreen.kt
app/src/main/kotlin/org/skitrace/skitrace/ui/stats/: StatsScreen.kt  StatsViewModel.kt
app/src/main/kotlin/org/skitrace/skitrace/ui/theme/: Type.kt
app/src/main/kotlin/org/skitrace/skitrace/ui/trace/: TraceScreen.kt  TraceViewModel.kt
app/src/main/kotln/org/skitrace/skitrace/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_notification_ski.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_paths.xml
app/src/test/java/org/skitrace/skitrace/: ExampleUnitTest.kt
core/: CMakeLists.txt  build.gradle.kts  dependencies.cmake  tests.cmake  vendor.cmake
core/src/androidTest/java/org/skitrace/skitrace/core/: CoreNativeTest.kt  JniTest.kt  NativeUnitTest.kt
core/src/main/cpp/: CMakeLists.txt  JNIExport.cc  JNIExport.cxx  TrackProcessor.cxx  TrackProcessor.hxx  export.cc
core/src/main/cpp/filter/: KalmanFilter.hxx  KalmanFilterCV.hxx  VerticalTracker.cxx  VerticalTracker.hxx
core/src/main/cpp/math/: GeoUtils.hxx
core/src/main/cpp/processor/: TrackProcessor.cxx  TrackProcessor.hxx
core/src/main/cxx/: CMakeLists.txt  export.cc
core/src/main/cxx/filter/: KalmanFilter.hxx  VerticalTracker.cxx
core/src/main/cxx/math/: GeoUtils.cxx
core/src/main/cxx/processor/: TrackProcessor.cxx  TrackProcessor.hxx
core/src/main/java/org/skitrace/skitrace/core/: TrackProcessor.java
core/src/main/java/org/skitrace/skitrace/core/model/: SkiStatistics.java  TrackPoint.java  TrackState.java
core/src/test/cpp/: GeoUtilsTest.cxx  TrackProcessorTest.cxx
data/: build.gradle.kts
data/src/main/: AndroidManifest.xml
gradle/: android-common.gradle  android-common.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
nativecore/: CMakeLists.txt
(+18 files in other folders)
